--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
+    "migration:sync": "npm run typeorm schema:sync -- -d ./data-source.ts",
+    "migration:drop": "npm run typeorm schema:drop -- -d ./data-source.ts",
+    "migration:reset": "npm run migration:drop && npm run migration:sync ",
+    "migration:run": "npm run typeorm migration:run -- -d ./data-source.ts",
+    "migration:generate": "npm run typeorm -- -d ./data-source.ts migration:generate --pretty",
+    "migration:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
+    "migration:revert": "npm run typeorm -- -d ./data-source.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
